--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <style>
         body {
 
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: Tahoma, Tahoma, sans-serif;
 
         }
 
@@ -31,19 +31,35 @@
 
             margin: 0 150px;
 
-            color: #1f4b1f;
+            color: #b62121;
+
+            text-align: justify;
+
+        }
+
+        p2 {
+
+            padding: 5px;
+
+            font-size: 16px;
+
+            margin: 0 150px;
+
+            color: #b62121;
+
+            text-align: center;
 
         }
 
         h1 {
 
-            color: #236823;
+            color: #cc234d;
 
         }
 
         a {
 
-            color: #236823;
+            color: #2453d3;
 
             text-decoration: none;
 
@@ -53,21 +69,108 @@
 
 <body style="text-align: center;">
 
-    <h1>Soldadinho-do-araripe \o/</h1>
+    <h1>Soldadinho-do-araripe</h1>
 
     <img src="img/soldadinhodoararipe.jpg" style="width: 25%;" alt="Outro Soldadinho-do-araripe na natureza">
+    <br><br>
+    <h2>
+        <strong>Ameaçada de extinção</strong>
+    </h2>
 
-    <p>O soldadinho-do-araripe (Antilophia bokermanni) é uma ave que vive na caatinga, em área restrita da Chapada do
-    Araripe, no Ceará. </p>
-    <br>
-    <p>Ela vem sofrendo com o problema do desmatamento da região, provocado pela criação de gado, monoculturas e o
-     crescimento desordenado das cidades. </p>
-    <br>
-    <p>Segundo o Livro Vermelho do ICMBio (2016), a espécie é classificada como criticamente ameaçada de extinção.</p>
-    <br>
-    <p><strong><a href="https://alexrese.com">~Prof. Alex Rese~</a></strong></p>
+    <p>
+        O soldadinho-do-araripe é uma ave <a href="https://www.wikiaves.com.br/wiki/passeriformes" class="wikilink1"
+            title="passeriformes">passeriforme</a> da família <a href="https://www.wikiaves.com.br/wiki/pipridae"
+            class="wikilink1" title="pipridae">Pipridae</a>. O nome bokermanni é uma homenagem ao zoólogo brasileiro <a
+            href="https://www.wikiaves.com.br/wiki/dicionario_wiki_aves#biologos_zoologos_pesquisadores_e_cientistas"
+            class="wikilink1" title="dicionario_wiki_aves">Werner Bokermann</a>.<br>
 
-    <p><strong>Em 04/05/2021 ADS - RWD</strong></p>
+    </p>
+
+    <p>
+        Foi descoberto em 1996 na Chapada do Araripe, região Nordeste do Brasil. Segundos os seus descobridores, o
+        soldadinho-do-araripe é encontrado somente nos municípios de Barbalha, Crato e Missão Velha, todos no Ceará.
+    </p>
+
+    <p>
+        A ONG cearense Aquasis (www.aquasis.org) vem trabalhando desde 2003 para sua preservação, e um <a
+            href="http://www.aquasis.org/adm/arquivos/Plano_de_Conservacao.pdf" class="urlextern"
+            title="http://www.aquasis.org/adm/arquivos/Plano_de_Conservacao.pdf" rel="nofollow">Plano e Conservação</a>
+        foi elaborado para evitar a extinção da espécie.
+        Na ausência de um nome vulgar, foi denominado como soldadinho-do-araripe (Coelho e Silva 1998) por ser do mesmo
+        gênero do outro <a href="https://www.wikiaves.com.br/wiki/soldadinho" class="wikilink1"
+            title="soldadinho">soldadinho</a>. Todavia, diferentes nomes regionais foram descobertos posteriormente,
+        como galo-da-mata, língua-de-tamanduá, lavadeira-da-mata, uirapuru-matreiro e cabeça-vermelha-da-mata, e esta
+        falta de consenso indica que o pássaro era pouco conhecido pelos habitantes da região.
+    </p>
+
+    <p>
+        O soldadinho-do-araripe é a única ave endêmica (exclusiva) do Ceará (obs. pess. Weber
+        Girão e Ciro Albano), sendo considerada uma das cinco espécies da fauna cearense mais
+        ameaçadas de extinção global na lista oficial brasileira de 2003 (MMA/Ibama), onde é classificada como
+        “Criticamente Em Perigo”, recebendo o mesmo status pela União Internacional para a Conservação da Natureza
+        (BirdLife International 2004) em sua lista de espécies globalmente ameaçadas de extinção.
+    </p>
+
+    </div>
+
+    <h2 class="sectionedit2" id="nome_cientifico">Nome Científico</h2>
+    <div class="level2">
+
+        <p>
+            <strong><a href="https://www.wikiaves.com.br/wiki/nome_cientifico?&amp;#pipridae" class="wikilink1"
+                    title="nome_cientifico">Seu nome científico significa:</a></strong> do (grego) <em>antios</em> =
+            diferente, e <em>lophos, lophoeis</em> = crista; e de <em>bokermanni</em> = homenagem ao zoólogo brasileiro
+            Professor Werner Carlos Augusto Bokermann (1929-1995). ⇒ <strong>Pássaro de <a
+                    href="https://www.wikiaves.com.br/wiki/dicionario_wiki_aves#biologos_zoologos_pesquisadores_e_cientistas"
+                    class="wikilink1" title="dicionario_wiki_aves">Bokermann</a> com crista diferente</strong>.
+        </p>
+
+    </div>
+
+    <h2 class="sectionedit3" id="caracteristicas">Características</h2>
+    <div class="level2">
+
+        <p>
+            O soldadinho-do-araripe é um pássaro com cerca de 15 centímetros de comprimento e 20 gramas de
+            massa, apresentando um <a href="https://www.wikiaves.com.br/wiki/dicionario_wiki_aves#d" class="wikilink1"
+                title="dicionario_wiki_aves">dimorfismo sexual</a> acentuado, pois a fêmea é de cor verde-oliva enquanto
+            o macho é branco, com a cauda e as penas de voo das asas negras, além de um
+            <a href="https://www.wikiaves.com.br/wiki/morfologia" class="wikilink1" title="morfologia">manto</a> carmim
+            que se estende do meio do dorso até um imponente topete sobre o bico, um
+            adorno praticamente ausente na fêmea.
+        </p>
+
+        <p>
+            Os jovens de ambos os sexos têm o mesmo aspecto da fêmea, mas à medida que os
+            machos se tornam adultos, penas carmins surgem na cabeça aumentando progressivamente
+            sua densidade, até que no final deste processo, as penas de voo negras substituem as
+            juvenis e a plumagem branca termina por suprimir totalmente a verde-oliva.
+        </p>
+
+        <p>Os topetes aumentam de comprimento em função do desenvolvimento dos machos, podendo
+            ultrapassar a ponta do bico em até quatro milímetros, e ocasionalmente alguma fêmea
+            apresenta penas carmins isoladas no dorso. Os machos apresentam as penas de voo um pouco
+            maiores do que as das fêmeas, sendo também ligeiramente mais compridos do que elas, que por sua vez, são um
+            pouco mais pesadas do que eles. A coloração da íris é grená, como as
+            pernas, exceto pelas plantas dos pés amareladas.
+        </p>
+
+
+
+        <p>O soldadinho-do-araripe (Antilophia bokermanni) é uma ave que vive na caatinga, em área restrita da Chapada
+            do
+            Araripe, no Ceará. </p>
+
+        <p>Ela vem sofrendo com o problema do desmatamento da região, provocado pela criação de gado, monoculturas e o
+            crescimento desordenado das cidades. </p>
+
+        <p>Segundo o Livro Vermelho do ICMBio (2016), a espécie é classificada como criticamente ameaçada de extinção.
+        </p>
+<br>
+        <p2><strong><a href="https://cleberbolfe.github.io/ads_rdw_soldadinhodoararipe/">~Aluno Cleber Bolfe~</a></strong>
+        </p2>
+
+        <p2><strong>Em 10/05/2021 ADS - RWD</strong></p2>
 
 </body>
 
